<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <!--include layout="@layout/content_main" /-->

    <Button
        android:id="@+id/btnNuevoViaje"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:background="@color/colorPrimary"
        android:text="@string/nuevoViaje"
        android:textColor="@color/blanco" />

    <Button
        android:id="@+id/btnRevisarViajes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:background="@color/colorPrimary"
        android:text="@string/revisarViajes"
        android:textColor="@color/blanco" />

    <Button
        android:id="@+id/btnModificarViajes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:background="@color/colorPrimary"
        android:text="@string/modificarViajes"
        android:textColor="@color/blanco" />

    <Button
        android:id="@+id/btnExportarExcel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:background="@color/colorPrimary"
        android:text="@string/exportarExcel"
        android:textColor="@color/blanco" />

</LinearLayout>